# minishell

./: CMakeLists.txt  Makefile  a.out  error  ft_enviroment.c  ft_exit.c  ft_get_path.c  main.c  minishell.h  proccess  test.sh
libft/: Makefile  accuracy.c  author  change.c  check.c  check_accuracy.c  check_flags.c  check_size.c  check_width.c  find.c  flags.c  ft_atoi.c  ft_bzero.c  ft_count_words.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_itoa_base.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_print.c  ft_printf.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  (+40 more)
